Fix: Updated script.js with robust element checks

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
 
     <main>
         <section class="hero-banner">
-            <div class="promo-content">
+           <!--<div class="promo-content">
                 <h1>PROMOCIÓN IMPERDIBLE</h1>
                 <p>PROMOCIÓN VÁLIDA HASTA EL 30 DE JUNIO DE 2025</p>
                 <div class="discount">
                     <span>25%</span> OFF
-                </div>
+                </div>-->
                 <div class="benefits">
                     <span><i class="fas fa-wrench"></i> MONTAJE GRATIS</span>
                     <span><i class="fas fa-pump-medical"></i> PICOS GRATIS</span>
