--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <header class="main-header">
         <div class="top-bar">
             <!-- Sección de redes sociales activa para que coincida con la página de detalle -->
-            <div class="social-media">
+            <!--<div class="social-media">
                 <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
                 <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-            </div>
+            </div>-->
             <div class="logo">
                 <!-- El logo ahora es un enlace a la página principal -->
                 <a href="index.html"><img src="./imagenes/logo.jpg" alt="Logo NEUPAR Cubiertas"></a>
@@ -49,8 +49,8 @@
     </header>
 
     <main>
-        <section class="hero-banner">
-           <!--<div class="promo-content">
+       <!--<section class="hero-banner">
+           <div class="promo-content">
                 <h1>PROMOCIÓN IMPERDIBLE</h1>
                 <p>PROMOCIÓN VÁLIDA HASTA EL 30 DE JUNIO DE 2025</p>
                 <div class="discount">
@@ -61,9 +61,9 @@
                     <span><i class="fas fa-pump-medical"></i> PICOS GRATIS</span>
                 </div>
             </div>
-            <div class="hero-image">
+           <!--<div class="hero-image">
                 <img src="./imagenes/banner-promo.jpg" alt="Neumáticos en promoción">
-            </div>
+            </div>-->
         </section>
 
         <section class="tire-search-by-size">
@@ -227,7 +227,7 @@
             <i class="fas fa-exclamation-triangle"></i>
             <p>ATENCIÓN: Precios exclusivos para el sitio web. Retiro en cualquiera de nuestras sucursales, no hacemos envíos por transportadora.</p>
         </div>
-        <div class="footer-content">
+        <!--<div class="footer-content">
             <div class="footer-section">
                 <h3>EL MEJOR PRECIO DEL PARAGUAY</h3>
                 <div class="contact-info">
@@ -249,7 +249,7 @@
                         </li>
                     </ul>
                 </div>
-            </div>
+            </div>-->
             <div class="footer-section">
                 <h3>CATEGORIAS</h3>
                 <ul>
