--- a/product-detail.html
+++ b/product-detail.html
@@ -162,8 +162,8 @@
         </div>
         <div class="footer-content">
             <div class="footer-section">
-                <h3>EL MEJOR PRECIO DEL PARAGUAY</h3>
-                <div class="contact-info">
+                <!--<h3>EL MEJOR PRECIO DEL PARAGUAY</h3>
+                   <div class="contact-info">
                     <p><i class="fas fa-phone-alt"></i> Tenés alguna consulta? Llámanos!</p>
                     <p><span>(061) 512 113</span> - <span>0800 11 63 87</span></p>
                     <p>Horario de atención:</p>
@@ -182,7 +182,7 @@
                         </li>
                     </ul>
                 </div>
-            </div>
+            </div>-->
             <div class="footer-section">
                 <h3>CATEGORIAS</h3>
                 <ul>
