--- a/index.html
+++ b/index.html
@@ -141,12 +141,19 @@
         <section class="services-section">
             <div class="services-content">
                 <div class="service-image">
-                    <img src="./imagenes/service-tire-mounting.jpg" alt="Montaje y desmontaje de cubiertas">
+                    <img src="./imagenes/service-tire-mounting.jpg" alt="Servicio de neumáticos">
                 </div>
                 <div class="service-details">
-                    <h3>Montaje y desmontaje de cubiertas</h3>
-                    <p>Un montaje correcto de las cubiertas es un aspecto fundamental de cara a garantizar un nivel óptimo de seguridad en la circulación de cualquier tipo de vehículo.</p>
-                    <p>En NEUPAR CUBIERTAS contamos con un equipo de profesionales altamente capacitados que se especializan en el montaje y desmontaje de cubiertas, garantizamos su seguridad y satisfacción con un servicio profesional.</p>
+                    <!-- Montaje y desmontaje de cubiertas como un ítem de acordeón -->
+                    <div class="accordion-item">
+                        <button class="accordion-header">
+                            Montaje y desmontaje de cubiertas <i class="fas fa-chevron-down"></i>
+                        </button>
+                        <div class="accordion-content">
+                            <p>Un montaje correcto de las cubiertas es un aspecto fundamental de cara a garantizar un nivel óptimo de seguridad en la circulación de cualquier tipo de vehículo.</p>
+                            <p>En NEUPAR CUBIERTAS contamos con un equipo de profesionales altamente capacitados que se especializan en el montaje y desmontaje de cubiertas, garantizamos su seguridad y satisfacción con un servicio profesional.</p>
+                        </div>
+                    </div>
 
                     <div class="accordion-item">
                         <button class="accordion-header">
