Refactor: Removed user nav links

--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
                 </div>
                 <nav class="user-nav">
                     <ul>
-                        <li><a href="#"><i class="fas fa-download"></i> Descargar productos</a></li>
-                        <li><a href="#"><i class="fas fa-envelope"></i> Contacto</a></li>
-                        <li><a href="#"><i class="fas fa-user"></i> Mi cuenta</a></li>
+                        <!-- Enlaces "Descargar productos", "Contacto", "Mi cuenta" eliminados -->
+                        <!-- Si en el futuro quieres añadir otros enlaces, puedes hacerlo aquí -->
                     </ul>
                 </nav>
             </div>
@@ -60,7 +59,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="./imagenes/banner-promo.jpg" alt="Neumáticos en promoción" loading="eager"> {/* Carga 'eager' porque es la imagen principal */}
+                <img src="./imagenes/banner-promo.jpg" alt="Neumáticos en promoción" loading="eager">
             </div>
         </section>
 
@@ -68,7 +67,7 @@
             <h2>Buscar neumático por medidas</h2>
             <div class="search-container">
                 <div class="explanation-image">
-                    <img src="./imagenes/medidas-neumatico.jpg" alt="Cómo saber la medida del neumático" loading="lazy"> {/* Lazy load */}
+                    <img src="./imagenes/medidas-neumatico.jpg" alt="Cómo saber la medida del neumático" loading="lazy">
                     <div class="labels">
                         <span class="label ancho">205 ANCHURA DEL NEUMÁTICO</span>
                         <span class="label perfil">55 PERFIL DEL NEUMÁTICO</span>
@@ -116,7 +115,7 @@
         <section id="search-results-section" class="search-results-section featured-products" style="display: none;">
             <h2>Resultados de Búsqueda</h2>
             <div id="search-results-grid" class="products-grid">
-                <!-- Los resultados de la búsqueda se insertarán aquí -->
+                {/* Los resultados de la búsqueda se insertarán aquí */}
             </div>
             <p id="no-search-results" style="display: none; color: gray; margin-top: 20px;">No se encontraron neumáticos con las medidas seleccionadas.</p>
         </section>
@@ -141,7 +140,7 @@
         <section class="services-section">
             <div class="services-content">
                 <div class="service-image">
-                    <img src="./imagenes/service-tire-mounting.jpg" alt="Servicio de neumáticos" loading="lazy"> {/* Lazy load */}
+                    <img src="./imagenes/service-tire-mounting.jpg" alt="Servicio de neumáticos" loading="lazy">
                 </div>
                 <div class="service-details">
                     <!-- Montaje y desmontaje de cubiertas como un ítem de acordeón -->
