--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             </div>
             <div class="header-right-nav">
                 <div class="search-bar">
-                    <input type="text" placeholder="Buscar marca o medida">
-                    <button><i class="fas fa-search"></i></button>
+                    <input type="text" id="header-search-input" placeholder="Buscar marca o medida"> {/* ID añadido */}
+                    <button id="header-search-button"><i class="fas fa-search"></i></button> {/* ID añadido */}
                 </div>
                 <nav class="user-nav">
                     <ul>
