--- a/index.html
+++ b/index.html
@@ -22,14 +22,10 @@
                 <a href="index.html"><img src="./imagenes/logo.jpg" alt="Logo NEUPAR Cubiertas"></a>
             </div>
             <div class="header-right-nav">
-                <div class="search-bar">
-                    <input type="text" id="header-search-input" placeholder="Buscar marca o medida"> {/* ID añadido */}
-                    <button id="header-search-button"><i class="fas fa-search"></i></button> {/* ID añadido */}
-                </div>
+                {/* Barra de búsqueda eliminada */}
                 <nav class="user-nav">
                     <ul>
-                        <!-- Enlaces "Descargar productos", "Contacto", "Mi cuenta" eliminados -->
-                        <!-- Si en el futuro quieres añadir otros enlaces, puedes hacerlo aquí -->
+                        {/* Enlaces "Descargar productos", "Contacto", "Mi cuenta" eliminados */}
                     </ul>
                 </nav>
             </div>
@@ -267,3 +263,4 @@
     
 </body>
 </html>
+
