--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <header class="main-header">
         <div class="top-bar">
-            <div class="social-media">
+            <!--<div class="social-media">
                 <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
                 <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
             </div>
@@ -29,7 +29,7 @@
                     </ul>
                 </nav>
             </div>
-        </div>
+        </div>-->
         <nav class="categories-nav">
             <ul>
                 <li><a href="#">Autos</a></li>
@@ -263,4 +263,3 @@
     
 </body>
 </html>
-
