--- a/product-detail.html
+++ b/product-detail.html
@@ -19,7 +19,7 @@
             <div class="logo">
                 <a href="index.html"><img src="./imagenes/logo.jpg" alt="Logo NEUPAR Cubiertas"></a>
             </div>
-            <div class="header-right-nav">
+           <!--<div class="header-right-nav">
                 {/* Barra de búsqueda eliminada */}
                 <nav class="user-nav">
                     <ul>
@@ -27,7 +27,7 @@
                     </ul>
                 </nav>
             </div>
-        </div>
+        </div>-->
         <nav class="categories-nav">
             <ul>
                 <li><a href="#">Autos</a></li>
