--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
     <header class="main-header">
         <div class="top-bar">
-            <!--<div class="social-media">
+           <div class="social-media">
                 <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
                 <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
             </div>
             <div class="logo">
                 <a href="index.html"><img src="./imagenes/logo.jpg" alt="Logo NEUPAR Cubiertas"></a>
             </div>
-            <div class="header-right-nav">
+           <!--<div class="header-right-nav">
                 {/* Barra de búsqueda eliminada */}
                 <nav class="user-nav">
                     <ul>
