--- a/product-detail.html
+++ b/product-detail.html
@@ -19,15 +19,15 @@
             <div class="logo">
                 <a href="index.html"><img src="./imagenes/logo.jpg" alt="Logo NEUPAR Cubiertas"></a>
             </div>
-           <!--<div class="header-right-nav">
+            <!--<div class="header-right-nav">
                 {/* Barra de búsqueda eliminada */}
                 <nav class="user-nav">
                     <ul>
                         {/* Enlaces "Descargar productos", "Contacto", "Mi cuenta" eliminados */}
                     </ul>
                 </nav>
-            </div>
-        </div>-->
+            </div>-->
+        </div>
         <nav class="categories-nav">
             <ul>
                 <li><a href="#">Autos</a></li>
@@ -81,8 +81,8 @@
         <section class="product-tabs-section">
             <div class="tab-headers">
                 <button class="tab-button active" data-tab="details">DETALLES</button>
-                <button class="tab-button" data-tab="more-info">MAS INFORMACIÓN</button>
-                <button class="tab-button" data-tab="ratings">CALIFICACIÓN</button>
+                <button class="tab-button active" data-tab="more-info">MAS INFORMACIÓN</button>
+                <button class="tab-button active" data-tab="ratings">CALIFICACIÓN</button>
             </div>
             <div class="tab-content-container">
                 <div id="details" class="tab-content">
