--- a/product-detail.html
+++ b/product-detail.html
@@ -51,7 +51,7 @@
                 <div class="product-info-detail">
                     <h1 id="product-name">Cargando...</h1>
                     <p class="price-detail" id="product-price"></p>
-                    <p class="price-local-detail" id="product-price-local"></p>
+                    <p class="price-local-detail" id="product-price-local"></p>0
                     
                     <ul class="product-quick-specs">
                         <li>Marca: <span id="product-brand"></span></li>
@@ -81,8 +81,8 @@
         <section class="product-tabs-section">
             <div class="tab-headers">
                 <button class="tab-button active" data-tab="details">DETALLES</button>
-                <button class="tab-button active" data-tab="more-info">MAS INFORMACIÓN</button>
-                <button class="tab-button active" data-tab="ratings">CALIFICACIÓN</button>
+                <button class="tab-button" data-tab="more-info">MAS INFORMACIÓN</button>
+                <button class="tab-button" data-tab="ratings">CALIFICACIÓN</button>
             </div>
             <div class="tab-content-container">
                 <div id="details" class="tab-content">
