--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
 
     <header class="main-header">
         <div class="top-bar">
-           <div class="social-media">
+            <div class="social-media">
                 <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
                 <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
             </div>
             <div class="logo">
-                <a href="index.html"><img src="./imagenes/logo.jpg" alt="Logo NEUPAR Cubiertas"></a>
+                <a href="index.html"><img src="./imagenes/logo.jpg" alt="Logo NEUPAR Cubiertas"></a> {/* Logo como enlace */}
             </div>
-          
+            
+        </div>
         <nav class="categories-nav">
             <ul>
                 <li><a href="#">Autos</a></li>
