--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
             </div>
             <div class="logo">
-                <a href="index.html"><img src="./imagenes/logo.jpg" alt="Logo NEUPAR Cubiertas"></a> {/* Logo como enlace */}
+                <a href="index.html"><img src="./imagenes/logo.jpg" alt="Logo NEUPAR Cubiertas"></a>
             </div>
             
         </div>
