--- a/product-detail.html
+++ b/product-detail.html
@@ -19,7 +19,14 @@
             <div class="logo">
                 <a href="index.html"><img src="./imagenes/logo.jpg" alt="Logo NEUPAR Cubiertas"></a>
             </div>
-          
+            <div class="header-right-nav">
+                {/* Barra de búsqueda eliminada */}
+                <nav class="user-nav">
+                    <ul>
+                        {/* Enlaces "Descargar productos", "Contacto", "Mi cuenta" eliminados */}
+                    </ul>
+                </nav>
+            </div>
         </div>
         <nav class="categories-nav">
             <ul>
@@ -38,7 +45,7 @@
                 <div class="product-gallery">
                     <img id="main-product-image" src="./imagenes/CUBIERTAS/np307/neupar-np307-1.jpg" alt="Neumático ROADWING 185/60R15" class="main-image" loading="eager">
                     <div class="thumbnail-gallery">
-                       
+                        {/* Las miniaturas se cargarán dinámicamente con lazy load */}
                     </div>
                 </div>
                 <div class="product-info-detail">
