--- a/index.html
+++ b/index.html
@@ -21,15 +21,27 @@
             <div class="logo">
                 <a href="index.html"><img src="./imagenes/logo.jpg" alt="Logo NEUPAR Cubiertas"></a>
             </div>
-            
+            <div class="header-right-nav">
+                {/* Botón de menú móvil (visible solo en pantallas pequeñas) */}
+                <button id="mobile-menu-button" class="mobile-menu-button hidden">
+                    <i class="fas fa-bars"></i>
+                </button>
+                {/* Barra de búsqueda eliminada (no funcional en este contexto) */}
+                <nav class="user-nav">
+                    <ul>
+                        {/* Enlaces "Descargar productos", "Contacto", "Mi cuenta" eliminados */}
+                    </ul>
+                </nav>
+            </div>
         </div>
-        <nav class="categories-nav">
+        {/* La navegación de categorías ahora tiene un ID para el menú móvil */}
+        <nav id="mobile-categories-nav" class="categories-nav">
             <ul>
-                <li><a href="#">Autos</a></li>
-                <li><a href="#">Pickup-Suv</a></li>
-                <li><a href="#">Camiones</a></li>
-                <li><a href="#">Agrícolas</a></li>
-                <li><a href="#">Llantas</a></li>
+                <li><a href="#" data-category="Autos">Autos</a></li> {/* Añadido data-category */}
+                <li><a href="#" data-category="Pickup-Suv">Pickup-Suv</a></li> {/* Añadido data-category */}
+                <li><a href="#" data-category="Camiones">Camiones</a></li> {/* Añadido data-category */}
+                <li><a href="#" data-category="Agrícolas">Agrícolas</a></li> {/* Añadido data-category */}
+                <li><a href="#" data-category="Llantas">Llantas</a></li> {/* Añadido data-category */}
             </ul>
         </nav>
     </header>
@@ -100,7 +112,7 @@
             </div>
         </section>
 
-        <!-- Nueva Sección de Resultados de Búsqueda -->
+        <!-- Nueva Sección de Resultados de Búsqueda (para búsqueda por medidas y categorías) -->
         <section id="search-results-section" class="search-results-section featured-products" style="display: none;">
             <h2>Resultados de Búsqueda</h2>
             <div id="search-results-grid" class="products-grid">
