--- a/product-detail.html
+++ b/product-detail.html
@@ -20,6 +20,10 @@
                 <a href="index.html"><img src="./imagenes/logo.jpg" alt="Logo NEUPAR Cubiertas"></a>
             </div>
             <div class="header-right-nav">
+                {/* Botón de menú móvil (visible solo en pantallas pequeñas) */}
+                <button id="mobile-menu-button" class="mobile-menu-button hidden">
+                    <i class="fas fa-bars"></i>
+                </button>
                 {/* Barra de búsqueda eliminada */}
                 <nav class="user-nav">
                     <ul>
@@ -28,13 +32,14 @@
                 </nav>
             </div>
         </div>
-        <nav class="categories-nav">
+        {/* La navegación de categorías ahora tiene un ID para el menú móvil */}
+        <nav id="mobile-categories-nav" class="categories-nav">
             <ul>
-                <li><a href="#">Autos</a></li>
-                <li><a href="#">Pickup-Suv</a></li>
-                <li><a href="#">Camiones</a></li>
-                <li><a href="#">Agrícolas</a></li>
-                <li><a href="#">Llantas</a></li>
+                <li><a href="#" data-category="Autos">Autos</a></li> {/* Añadido data-category */}
+                <li><a href="#" data-category="Pickup-Suv">Pickup-Suv</a></li> {/* Añadido data-category */}
+                <li><a href="#" data-category="Camiones">Camiones</a></li> {/* Añadido data-category */}
+                <li><a href="#" data-category="Agrícolas">Agrícolas</a></li> {/* Añadido data-category */}
+                <li><a href="#" data-category="Llantas">Llantas</a></li> {/* Añadido data-category */}
             </ul>
         </nav>
     </header>
