edith product-detail

--- a/product-detail.html
+++ b/product-detail.html
@@ -46,11 +46,11 @@
     <main class="product-detail-main">
         <section class="product-detail-section">
             <div class="product-detail-container">
-                <div class="product-gallery">
+                <!--<div class="product-gallery">
                     <img id="main-product-image" src="./imagenes/CUBIERTAS/np307/neupar-np307-1.jpg" alt="Neumático ROADWING 185/60R15" class="main-image" loading="eager">
                     <div class="thumbnail-gallery">
                         
-                    </div>
+                    </div>-->
                 </div>
                 <div class="product-info-detail">
                     <h1 id="product-name">Cargando...</h1>
