Inhabilitar pagina de detalle y remover boton 'Ver producto'

--- a/search-results.html
+++ b/search-results.html
@@ -76,7 +76,7 @@
         .product-info-left .price {
             font-size: 1.5rem; /* text-2xl */
             font-weight: 700; /* font-bold */
-            color: #22c55e; /* Verde que usas para precios */
+            color: #dc3545; /* Rojo que usas para precios */
             margin-bottom: 0.25rem;
         }
         .product-info-left .price-details {
@@ -86,12 +86,12 @@
         }
         .product-info-left .details-link {
             font-size: 0.875rem; /* text-sm */
-            color: #3b82f6; /* text-blue-600 */
+            color: #dc3545; /* Rojo */
             text-decoration: none;
             transition: color 0.2s ease-in-out;
         }
         .product-info-left .details-link:hover {
-            color: #2563eb; /* blue-700 */
+            color: #c82333; /* Rojo más oscuro */
         }
         .product-brand-logo {
             width: 80px; /* Tamaño del logo de la marca */
@@ -109,7 +109,7 @@
         }
         /* Estilo del botón "COMPRAR", similar a btn-subscribe o btn-search */
         .buy-button {
-            background-color: #007bff; /* Un azul vibrante, similar a los botones de tu sitio */
+            background-color: #dc3545; /* Rojo */
             color: white;
             padding: 0.75rem 1.5rem;
             border-radius: 0.5rem;
@@ -119,7 +119,7 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* Sombra para el botón */
         }
         .buy-button:hover {
-            background-color: #0056b3; /* Azul más oscuro al pasar el ratón */
+            background-color: #c82333; /* Rojo más oscuro al pasar el ratón */
             transform: translateY(-2px); /* Pequeño levantamiento al pasar el ratón */
         }
         .buy-button:active {
@@ -154,4 +154,3 @@
     <script src="js/search-results-script.js"></script>
 </body>
 </html>
-
