Añadir página de subida de productos y función de Netlify

--- a/search-results.html
+++ b/search-results.html
@@ -6,6 +6,8 @@
     <title>Resultados de Búsqueda de Neumáticos</title>
     <!-- Incluye Tailwind CSS para estilos básicos y responsividad -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Enlace a tu archivo de estilos principal para consistencia -->
+    <link rel="stylesheet" href="./css/style.css">
     <!-- Iconos de Font Awesome (para consistencia con index.html) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -142,6 +144,40 @@
     </style>
 </head>
 <body class="p-4">
+    <!-- HEADER COPIADO DE index.html -->
+    <header class="main-header">
+        <div class="top-bar">
+            <div class="social-media">
+                <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+            </div>
+            <div class="logo">
+                <a href="index.html"><img src="./imagenes/logo.jpg" alt="Logo NEUPAR Cubiertas"></a>
+            </div>
+            <div class="header-right-nav">
+                <button id="mobile-menu-button" class="mobile-menu-button hidden">
+                    <i class="fas fa-bars"></i>
+                </button>
+                <nav class="user-nav">
+                    <ul>
+                        <!-- Puedes añadir elementos de navegación de usuario si los necesitas aquí -->
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        
+        <nav id="mobile-categories-nav" class="categories-nav">
+            <ul>
+                <li><a href="#" data-category="Autos">Autos</a></li>
+                <li><a href="#" data-category="Pickup-Suv">Pickup-Suv</a></li> 
+                <li><a href="#" data-category="Camiones">Camiones</a></li> 
+                <li><a href="#" data-category="Agrícolas">Agrícolas</a></li> 
+                <li><a href="#" data-category="Llantas">Llantas</a></li> 
+            </ul>
+        </nav>
+    </header>
+    <!-- FIN DEL HEADER -->
+
     <div class="container mx-auto mt-8 mb-8 flex-grow">
         <h1 class="text-3xl font-bold text-center text-gray-800 mb-8">Resultados de Búsqueda</h1>
         <div id="searchResultsContainer" class="flex flex-col items-center">
@@ -150,7 +186,87 @@
         </div>
     </div>
 
+    <!-- FOOTER COPIADO DE index.html (Opcional, si quieres un footer completo) -->
+    <footer class="main-footer">
+        <div class="footer-attention">
+            <i class="fas fa-exclamation-triangle"></i>
+            <p>ATENCIÓN: Precios exclusivos para el sitio web. Retiro en cualquiera de nuestras sucursales, no hacemos envíos por transportadora.</p>
+        </div>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>EL MEJOR PRECIO DEL PARAGUAY</h3>
+                <div class="contact-info">
+                    <p><i class="fas fa-phone-alt"></i> Tenés alguna consulta? Llámanos!</p>
+                    <p><span>(061) 512 113</span> - <span>0800 11 63 87</span></p>
+                    <p>Horario de atención:</p>
+                    <ul>
+                        <li><i class="fas fa-map-marker-alt"></i> Av. San Blas km 1.5, Ciudad del Este.
+                            <br> Lun. a Vie.: <span>06:00 a 18hs</span> - Sáb.: <span>06:00 a 13:00hs</span>
+                        </li>
+                        <li><i class="fas fa-map-marker-alt"></i> Av. Eusebio Ayala esq. Pitiantuta Asunción.
+                            <br> Lun. a Vie.: <span>07:00 a 18hs</span> - Sáb.: <span>07:00 a 13:00hs</span>
+                        </li>
+                        <li><i class="fas fa-map-marker-alt"></i> Av. Madame Elisa A. Lynch, Asunción.
+                            <br> Lun. a Vie.: <span>07:00 a 18hs</span> - Sáb.: <span>07:00 a 13:00hs</span>
+                        </li>
+                        <li><i class="fas fa-map-marker-alt"></i> Calle Guaraníes y Charrua, Limpio.
+                            <br> Lun. a Vie.: <span>07:00 a 18hs</span> - Sáb.: <span>07:00 a 13:00hs</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-section">
+                <h3>CATEGORIAS</h3>
+                <ul>
+                    <li><a href="#">Autos</a></li>
+                    <li><a href="#">Pickup-Suv</a></li>
+                    <li><a href="#">Camiones</a></li>
+                    <li><a href="#">Agrícolas</a></li>
+                    <li><a href="#">Llantas</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h3>ENLACES RAPIDOS</h3>
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Contacto</a></li>
+                    <li><a href="#">Tienda</a></li>
+                    <li><a href="#">Preguntas Frecuentes</a></li>
+                    </ul>
+                </div>
+            <div class="footer-section">
+                <h3>LA EMPRESA</h3>
+                <ul>
+                    <li><a href="#">Trabaja con Nosotros</a></li>
+                    <li><a href="#">Contáctenos</a></li>
+                    <li><a href="#">Conózcanos</a></li>
+                    <li><a href="#">Términos y condiciones</a></li>
+                    <li><a href="#">Políticas de privacidad</a></li>
+                </ul>
+            </div>
+            <div class="footer-section footer-newsletter">
+                <h3>Recibe las mejores ofertas en Cubiertas, ¡suscríbete ahora!</h3>
+                <form>
+                    <input type="email" placeholder="Correo electrónico" required>
+                    <button type="submit" class="btn-subscribe">SUSCRIBIRSE</button>
+                </form>
+            </div>
+        </div>
+        <div class="footer-disclaimer">
+            <p>Precios y condiciones de pago exclusivos para tienda online. Ventas sujetas a análisis y confirmación de datos. Valores, informaciones y stock con posibilidad de alteración sin previo aviso. Imágenes meramente ilustrativas.</p>
+        </div>
+    </footer>
+
+    <a href="https://wa.me/595XXXXXXXXX" class="whatsapp-float" target="_blank">
+        <i class="fab fa-whatsapp"></i>
+    </a>
+    <!-- FIN DEL FOOTER -->
+
     <!-- Script para manejar la lógica de búsqueda y renderizado -->
     <script src="js/search-results-script.js"></script>
+    <!-- Si quieres que el menú móvil funcione en esta página, también necesitarías incluir script.js
+         o extraer la lógica del menú móvil a un archivo JS compartido.
+         Por ahora, solo los estilos se aplicarán. -->
+    <!-- <script src="./js/script.js"></script> -->
 </body>
 </html>
